# backburner

./: .gitignore  CMakeLists.txt  README.md
inc/: backburner.h
inc/backburner/: macro.h  pointers.h  primitives.h  stdint.h
src/: CMakeLists.txt  backburner.c
tests/: CMakeLists.txt  await_all.cpp  await_one.cpp  await_silly.cpp  poll_one.cpp
